# cv

./: .gitignore  .terraform.lock.hcl  Dockerfile  LICENSE  Makefile  README.md  cover_letter.tex  cv.tex  index.md  main.tf  make.sh  pre_commit.sh  pyproject.toml  requirements.txt  test.py  update_image.sh  variables.tf
.github/workflows/: deploy.yml  docker.yml
scripts/: pre_commit.sh
src/: cv.tex  dalton_luce_cv.tex
test/: test.py
